--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "futuremind",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://franco-fantini.github.io/futuremind",
+  "homepage": "https://Franco-Fantini.github.io/futuremind",
   "type": "module",
   "scripts": {
     "dev": "vite",
